--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "main": "index.js",
   "dependencies": {
     "@rainder/callbacks": "^0.3.2",
-    "bson": "^0.5.4"
+    "@splytech-io/eslint-config": "0.0.3",
+    "bson": "^1.0.4",
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^3.17.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
