--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "dependencies": {
     "@rainder/callbacks": "^0.3.2",
     "@splytech-io/eslint-config": "0.0.3",
-    "bson": "^1.0.4",
-    "chai": "^3.5.0",
-    "mocha": "^3.2.0"
+    "bson": "^1.0.4"
   },
   "devDependencies": {
-    "eslint": "^3.17.1"
+    "chai": "^3.5.0",
+    "eslint": "^3.17.1",
+    "mocha": "^3.2.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
